# stegosource

./: .env.example  .mcp.json  CLAUDE.md  LICENSE  README.md  agent.py  app.py  chart_theme.py  design-system.md  discovery.md  dynamic_defaults.py  implementation-plan.md  pyproject.toml
.automatasaurus/agents/architect/: AGENT.md  PROJECT.md
.automatasaurus/commands/: auto-clear.md  auto-discovery.md  auto-evolve.md  auto-plan.md  auto-work-all.md  auto-work-issue.md  auto-work-milestone.md
.claude/: .automatasaurus.manifest.json  commands.md  settings.json  settings.local.json
.claude/agents/: architect  architect.md  designer  designer.md  developer  developer.md  evolver  evolver.md  researcher  researcher.md  tester  tester.md
.claude/commands/: auto-clear.md  auto-discovery.md  auto-evolve.md  auto-plan.md  auto-work-all.md  auto-work-issue.md  auto-work-milestone.md
.claude/hooks/: notify.sh  on-stop.sh  request-attention.sh
.claude/skills/: agent-coordination  api-design  code-review  css-standards  github-issues  github-workflow  infrastructure-standards  javascript-standards  notifications  pr-writing  project-commands  python-standards  requirements-gathering  security-standards  team-coordination  testing-standards  user-stories  work-issue  workflow-orchestration
.devcontainer/: devcontainer.json
.streamlit/: config.toml
orchestration/discovery/: agent-sdk-research.md
tests/: test_agent.py  test_alpha_vantage.py  test_app.py  test_chart_theme.py  test_dynamic_defaults.py
tools/: __init__.py  __main__.py  alpha_vantage.py
(+104 files in other folders)
